# arXiv4claudecode

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
scripts/: install_ar5ivist.sh
skills/arxiv-reader/: SKILL.md
skills/arxiv-reader/scripts/: read_paper.sh
src/arxiv_cli/: __init__.py  __main__.py  ar5ivist.py  categories.py  cli.py  client.py  converter.py  formatter.py  models.py  parsers.py  stats.py
src/arxiv_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
