[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-cli"
version = "0.1.0"
description = "arXiv CLI - Browse, search, and download papers from arxiv.org"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "arXiv CLI Team"}]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "requests>=2.28",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "arxiv>=3.0",
]

[project.scripts]
arxiv = "arxiv_cli.cli:cli"

[project.urls]
Homepage = "https://github.com/user/arxiv-cli"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
